# pulse-courier

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pulse-courier.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py  observability.py  redis.py  templates.py
app/db/: session.py
app/providers/: __init__.py  base.py  console.py
app/schemas/: __init__.py  message.py
app/services/: notifications.py
app/templates/: sample.html
app/worker/: __init__.py  celery_app.py  tasks.py
scripts/: qa.ps1  qa.sh  release.ps1
tests/: conftest.py  test_health.py  test_send_smoke.py
