[project]
name = "pulse-courier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
(
  ^\.history/
)
'''

[tool.ruff]
line-length = 100
fix = true
extend-exclude = [".history"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "BLE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/worker/tasks.py" = ["BLE001"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
exclude = '(^\\.history/|^\.history/|\\\\.history\\\\)'
